Enabled debug logging

--- a/MLFairyApp.iOS/MLFairyApp.iOS.xcodeproj/xcshareddata/xcschemes/MLFairyApp.iOS.xcscheme
+++ b/MLFairyApp.iOS/MLFairyApp.iOS.xcodeproj/xcshareddata/xcschemes/MLFairyApp.iOS.xcscheme
@@ -61,6 +61,12 @@
             ReferencedContainer = "container:MLFairyApp.iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-MLFEnableDebug"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
