--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_install:
   - gem install xcpretty
 
 script:
-  - cd MLFairy
+  - set -o pipefail
   - carthage update --cache-builds --new-resolver --configuration Debug
-  - xcodebuild test -scheme "$SCHEME" -project 'MLFairy.xcodeproj' -sdk $SDK -destination "$DESTINATION"
+  - xcodebuild test -scheme "$SCHEME" -workspace "MLFairy.workspace" -sdk $SDK -destination "$DESTINATION" | xcpretty
