--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ matrix:
       - SDK="iphonesimulator" 
       - DESTINATION="OS=12.2,name=iPhone Xs"
       - PLATFORM="ios"
+      - DERIVED_DATA_DIR="./Build/DerivedData/iOS"
   - osx_image: xcode10.2 
     env: 
       - SCHEME="MLFairy macOS" 
       - SDK="macosx" 
       - DESTINATION="arch=x86_64"
       - PLATFORM="macos"
+      - DERIVED_DATA_DIR="./Build/DerivedData/macOS"
 
 cache:
   directories:
@@ -27,4 +29,5 @@ before_install:
 script:
   - set -o pipefail
   - carthage update --cache-builds --new-resolver --configuration Debug --project-directory MLFairy
-  - xcodebuild test -scheme "$SCHEME" -workspace "MLFairy.xcworkspace" -sdk $SDK -destination "$DESTINATION" | xcpretty
+  - mkdir -p $DERIVED_DATA_DIR
+  - xcodebuild test -scheme "$SCHEME" -workspace "MLFairy.xcworkspace" -sdk $SDK -destination "$DESTINATION" -derivedDataPath "$DERIVED_DATA_DIR" | xcpretty
