--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,20 @@ matrix:
   include:
   - osx_image: xcode10.2 
     env: 
-      - SCHEME="MLFairy" 
       - SDK="iphonesimulator" 
       - DESTINATION="OS=12.2,name=iPhone Xs"
-      - PLATFORM="ios"
-      - DERIVED_DATA_DIR="./Build/DerivedData/iOS"
   - osx_image: xcode10.2 
     env: 
-      - SCHEME="MLFairy" 
       - SDK="macosx" 
       - DESTINATION="arch=x86_64"
-      - PLATFORM="macos"
-      - DERIVED_DATA_DIR="./Build/DerivedData/macOS"
+  - osx_image: xcode10.2 
+    env: 
+      - SDK="watchsimulator" 
+      - DESTINATION="OS=5.2,name=Apple Watch Series 4 - 44mm"
+  - osx_image: xcode10.2 
+    env: 
+      - SDK="appletvsimulator" 
+      - DESTINATION="OS=12.2,name=Apple TV 4K (at 1080p)"
 
 cache:
   directories:
@@ -30,4 +32,4 @@ script:
   - set -o pipefail
   - carthage update --cache-builds --new-resolver --configuration Debug --project-directory MLFairy
   - mkdir -p $DERIVED_DATA_DIR
-  - xcodebuild test -scheme "$SCHEME" -workspace "MLFairy.xcworkspace" -sdk $SDK -destination "$DESTINATION" -derivedDataPath "$DERIVED_DATA_DIR" | xcpretty
+  - xcodebuild test -scheme "MLFairy" -workspace "MLFairy.xcworkspace" -sdk $SDK -destination "$DESTINATION" | xcpretty
