--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ matrix:
         branch: master
         tags: true
         repo: mlfairy/mlfairy
+  - osx_image: xcode9
+    env:
+    - SDK="iphonesimulator"
+    - DESTINATION="OS=11.0,name=iPhone Xs"
   - osx_image: xcode10.2
     env:
     - SDK="macosx"
