--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ matrix:
       - carthage build --archive --platform iOS,tvOS,macOS
       - sed "s/%VERSION%/${TRAVIS_TAG}/g" MLFairy.podspec.template > MLFairy.podspec
     after_deploy:
-      - pod trunk push --skip-tests --allow-warnings
+      - pod trunk push MLFairy.podspec --skip-tests --allow-warnings
+      - sh <(curl -s https://codecov.io/bash) -J '^MLFairy'
     deploy:
       provider: releases
       skip_cleanup: true
