Change platforms for Xcode 11

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   - osx_image: xcode11
     env:
     - SDK="iphonesimulator"
-    - DESTINATION="OS=11.0,name=iPhone Xs"
+    - DESTINATION="OS=11.0.1,name=iPhone X"
     before_deploy:
       - plutil -replace CFBundleShortVersionString -string "${TRAVIS_TAG}" MLFairy/MLFairy/Info.plist
       - carthage build --archive --platform iOS,tvOS,macOS
