--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   - osx_image: xcode11
     env:
     - SDK="iphonesimulator"
-    - DESTINATION="OS=11.0.1,name=iPhone X"
+    - DESTINATION="OS=12.2,name=iPhone Xs"
     before_deploy:
       - plutil -replace CFBundleShortVersionString -string "${TRAVIS_TAG}" MLFairy/MLFairy/Info.plist
       - carthage build --archive --platform iOS,tvOS,macOS
@@ -31,7 +31,7 @@ matrix:
   - osx_image: xcode11
     env:
     - SDK="appletvsimulator"
-    - DESTINATION="OS=11.0,name=Apple TV 4K (at 1080p)"
+    - DESTINATION="OS=12.2,name=Apple TV 4K (at 1080p)"
 cache:
   directories:
   - Carthage
