--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
     env:
     - SDK="iphonesimulator"
     - DESTINATION="OS=12.2,name=iPhone Xs"
+    - PLATFORM="ios"
     before_deploy:
       - plutil -replace CFBundleShortVersionString -string "${TRAVIS_TAG}" MLFairy/MLFairy/Info.plist
       - carthage build --archive --platform iOS,tvOS,macOS
@@ -28,10 +29,12 @@ matrix:
     env:
     - SDK="macosx"
     - DESTINATION="arch=x86_64"
+    - PLATFORM="macos"
   - osx_image: xcode11
     env:
     - SDK="appletvsimulator"
     - DESTINATION="OS=12.2,name=Apple TV 4K (at 1080p)"
+    - PLATFORM="tvos"
 cache:
   directories:
   - Carthage
@@ -43,4 +46,5 @@ script:
 - set -o pipefail
 - carthage update --cache-builds --new-resolver --configuration Debug
 - xcodebuild test -scheme "MLFairy" -workspace "MLFairy.xcworkspace" -sdk $SDK -destination "$DESTINATION" | xcpretty
+- pod spec lint --fail-fast --allow-warnings --platforms=$PLATFORM
 
