--- a/MLFairy.podspec.template
+++ b/MLFairy.podspec.template
@@ -18,7 +18,7 @@ Pod::Spec.new do |s|
 		ss.source_files  = "MLFairy/Source"
 		ss.dependency "Alamofire", "~> 5.0.0-rc.2"
 		ss.dependency "PromisesSwift", "~> 1.2.8"
-		ss.dependency "MLFSupport", "0.0.2"
+		ss.dependency "MLFSupport"
 		ss.frameworks  = "Foundation", "Security"
 	end
 end
