--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,6 @@ script:
 - set -o pipefail
 - carthage update --cache-builds --new-resolver --configuration Debug
 - xcodebuild test -scheme "MLFairy" -workspace "MLFairy.xcworkspace" -sdk $SDK -destination "$DESTINATION" | xcpretty
+- sed "s/99.99.99/${TRAVIS_TAG}/g" MLFairy.podspec.template > MLFairy.podspec
 - pod spec lint --fail-fast --allow-warnings --platforms=$PLATFORM
 
