Update pod repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_install:
 - brew update
 - brew install carthage
 - gem install xcpretty
+- pod repo update
 script:
 - set -o pipefail
 - carthage update --cache-builds --new-resolver --configuration Debug
