--- a/MLFairy.podspec.template
+++ b/MLFairy.podspec.template
@@ -12,6 +12,7 @@ Pod::Spec.new do |s|
 	s.ios.deployment_target = "11.0"
 	s.tvos.deployment_target = "11.0"
 	s.osx.deployment_target = "10.13"
+	s.watchos.deployment_target = "4.0"
 
 	s.pod_target_xcconfig = {
 		"PRODUCT_BUNDLE_IDENTIFIER" => "com.mlfairy.sdk"
@@ -23,6 +24,7 @@ Pod::Spec.new do |s|
 	s.osx.dependency "MLFPromisesSwift", "~> 1.2.8"
 	s.ios.dependency "PromisesSwift", "~> 1.2.8"
 	s.tvos.dependency "PromisesSwift", "~> 1.2.8"
+	s.watchos.dependency "PromisesSwift", "~> 1.2.8"
 
 	s.frameworks  = "Foundation", "Security"
 
