Select different watchos device

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
   - osx_image: xcode11.2
     env:
     - SDK="watchsimulator"
-    - DESTINATION="OS=6.1,name=Apple Watch - 42mm"
+    - DESTINATION="OS=6.1,name=Apple Watch Series 5 - 44mm"
     - c="watchos"
   - osx_image: xcode11.2
     env:
