Forget running tests for macos (need 10.15)

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ matrix:
         branch: master
         tags: true
         repo: mlfairy/mlfairy
-  - osx_image: xcode11.2
-    env:
-    - SDK="macosx10.15"
-    - DESTINATION="arch=x86_64"
-    - PLATFORM="macos"
+  # - osx_image: xcode11.2
+  #   env:
+  #   - SDK="macosx10.15"
+  #   - DESTINATION="arch=x86_64"
+  #   - PLATFORM="macos"
   - osx_image: xcode11.2
     env:
     - SDK="watchsimulator"
